--- a/config/config.toml
+++ b/config/config.toml
@@ -1,27 +1,17 @@
 [database]
 
-# The database for caching, support Redis, MySQL, Postgres and MongoDB:
-#   redis://<user>:<password>@<host>:<port>/<db_number>
-#   rediss://<user>:<password>@<host>:<port>/<db_number>
-#   postgres://bob:secret@1.2.3.4:5432/mydb?sslmode=verify-full
-#   postgresql://bob:secret@1.2.3.4:5432/mydb?sslmode=verify-full
-#   mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-#   mongodb+srv://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
+# Use Redis for caching
 cache_store = "redis://localhost:6379/0"
 
-# The database for persist data, support MySQL, Postgres, ClickHouse and MongoDB:
-#   mysql://[username[:password]@][protocol[(address)]]/dbname[?param1=value1&...&paramN=valueN]
-#   postgres://bob:secret@1.2.3.4:5432/mydb?sslmode=verify-full
-#   postgresql://bob:secret@1.2.3.4:5432/mydb?sslmode=verify-full
-#   clickhouse://user:password@host[:port]/database?param1=value1&...&paramN=valueN
-#   chhttp://user:password@host[:port]/database?param1=value1&...&paramN=valueN
-#   chhttps://user:password@host[:port]/database?param1=value1&...&paramN=valueN
-#   mongodb://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-#   mongodb+srv://[username:password@]host1[:port1][,...hostN[:portN]][/[defaultauthdb][?options]]
-data_store = "mysql://gorse:gorse_pass@tcp(localhost:3306)/gorse"
+# Use PostgreSQL for persistent data
+data_store = "postgres://gorse:Dima2020@postgres:5432/gorse?sslmode=disable"
 
-# The naming prefix for tables (collections, keys) in databases. The default value is empty.
+# The naming prefix for tables (optional).
 table_prefix = ""
+
+# Additional PostgreSQL options
+[database.postgres]
+# Adjust options as needed, e.g., connection pooling, timeout, etc.
 
 # The naming prefix for tables (collections, keys) in cache storage databases. The default value is `table_prefix`.
 cache_table_prefix = ""
@@ -63,10 +53,10 @@ n_jobs = 1
 meta_timeout = "10s"
 
 # Username for the master node dashboard.
-dashboard_user_name = ""
+dashboard_user_name = "Dima"
 
 # Password for the master node dashboard.
-dashboard_password = ""
+dashboard_password = "masha2020"
 
 # Secret key for admin APIs (SSL required).
 admin_api_key = ""
