--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,51 +6,17 @@ services:
     ports:
       - 6379:6379
 
-  mysql:
-    image: mysql/mysql-server
+  postgres:
+    image: postgres:10
     restart: unless-stopped
     ports:
-      - 3306:3306
+      - 5432:5432
     environment:
-      MYSQL_ROOT_PASSWORD: root_pass
-      MYSQL_DATABASE: gorse
-      MYSQL_USER: gorse
-      MYSQL_PASSWORD: gorse_pass
+      POSTGRES_DB: gorse
+      POSTGRES_USER: gorse
+      POSTGRES_PASSWORD: Dima2020
     volumes:
-      - mysql_data:/var/lib/mysql
-
-  # postgres:
-  #   image: postgres:10.0
-  #   ports:
-  #     - 5432:5432
-  #   environment:
-  #     POSTGRES_DB: gorse
-  #     POSTGRES_USER: gorse
-  #     POSTGRES_PASSWORD: gorse_pass
-  #   volumes:
-  #     - postgres_data:/var/lib/postgresql/data
-
-  # mongo:
-  #   image: mongo:4.0
-  #   ports:
-  #     - 27017:27017
-  #   environment:
-  #     MONGO_INITDB_DATABASE: gorse
-  #     MONGO_INITDB_ROOT_USERNAME: root
-  #     MONGO_INITDB_ROOT_PASSWORD: password
-  #   volumes:
-  #     - mongo_data:/data/db
-
-  # clickhouse:
-  #   image: clickhouse/clickhouse-server:22
-  #   ports:
-  #     - 8123:8123
-  #   environment:
-  #     CLICKHOUSE_DB: gorse
-  #     CLICKHOUSE_USER: gorse
-  #     CLICKHOUSE_PASSWORD: gorse_pass
-  #   volumes:
-  #     - clickhouse_data:/var/lib/clickhouse
+      - postgres_data:/var/lib/postgresql/data
 
   worker:
     image: zhenghaoz/gorse-worker
@@ -92,10 +58,8 @@ services:
       - 8088:8088
     environment:
       GORSE_CACHE_STORE: redis://redis:6379
-      GORSE_DATA_STORE: mysql://gorse:gorse_pass@tcp(mysql:3306)/gorse
-      # GORSE_DATA_STORE: postgres://gorse:gorse_pass@postgres/gorse?sslmode=disable
-      # GORSE_DATA_STORE: mongodb://root:password@mongo:27017/gorse?authSource=admin&connect=direct
-      # GORSE_DATA_STORE: clickhouse://gorse:gorse_pass@clickhouse:8123/gorse
+      GORSE_DATA_STORE: postgres://gorse:Dima2020@postgres:5432/gorse?sslmode=disable
+      
     command: >
       -c /etc/gorse/config.toml 
       --log-path /var/log/gorse/master.log 
@@ -106,17 +70,11 @@ services:
       - master_data:/var/lib/gorse
     depends_on:
       - redis
-      - mysql
-      # - postgres
-      # - mongo
-      # - clickhouse
+      - postgres
 
 volumes:
   worker_data:
   server_data:
   master_data:
   gorse_log:
-  mysql_data:
-  # postgres_data:
-  # mongo_data:
-  # clickhouse_data:
+  postgres_data:
