--- a/config/config.toml
+++ b/config/config.toml
@@ -53,10 +53,10 @@ n_jobs = 1
 meta_timeout = "10s"
 
 # Username for the master node dashboard.
-dashboard_user_name = "Dima"
+dashboard_user_name = "Admin"
 
 # Password for the master node dashboard.
-dashboard_password = "masha2020"
+dashboard_password = "admin123"
 
 # Secret key for admin APIs (SSL required).
 admin_api_key = ""
@@ -98,7 +98,7 @@ active_user_ttl = 0
 positive_feedback_types = ["star","like"]
 
 # The feedback types for read events.
-read_feedback_types = ["read"]
+read_feedback_types = ["view"]
 
 # The time-to-live (days) of positive feedback, 0 means disabled. The default value is 0.
 positive_feedback_ttl = 0
